[package]
name = "raknet-rs"
version = "0.1.0"
authors = ["admin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_deref = "1.1.1"
num_enum = "0.5"
bytes = "0.5"
bytes_addition = { path = "bytes_addition" }
rustfix = "0.5"