[package]
name = "raknet-rs"
version = "0.1.0"
authors = ["admin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_deref = "1.1.1"
num_enum = "0.5"
bytes = "1.0"
bytes_addition = { path = "bytes_addition" }
c-types = "2.0"
regex = "1.3"
log = "0.4"
parking_lot = "0.11"